Replace the deprecated Runtime.exec() with ProcessBuilder.start()